gl33-master/src/test/deca/context/invalid/other/affectation_string_void.deca
// Invalid test
// Affectation d'un string à un void

{
   String s;
   void v;

   v = s;
   v = "non";
}
